# Three-Filters-to-Normal

./: .gitignore  CMakeLists.txt  Gemfile  LICENSE  README.md
_site/: README.md  index.html
_site/c_code/include/tftn/: RIN.cpp
_site/cuda_code/src/: stdafx.h
c_code/: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md
c_code/CmakeExample/: .gitignore  CMakeLists.txt  demo.cpp  loadpy.cpp
c_code/PythonExample/: demo.py  setup.py
c_code/cmake/: TFTNConfig.cmake.in
c_code/example/: demo.cpp
c_code/include/tftn/: py_readexr.cpp  py_readexr.h  readexr.cpp  readexr.h  tftn.cpp  tftn.h
c_code/pybind11/: py_reader.cpp
cuda_code/: CMakeLists.txt
cuda_code/src/: CMakeLists.txt  main.cu
data/android/: params.txt
include/tftn/: RIN.cpp  tftn.h
matlab_code/: demo.m
matlab_code/torusknot/: params.txt
test/: example.cpp
